<resources xmlns:tools="http://schemas.android.co+m/tools">
    <string name="app_name">FoodCourt(CPN) v0.055</string>
    <string name="config_title">Setup Connection</string>
    <string name="press_back">Press BACK again to exit!</string>
    <string name="login">login</string>
    <string name="worktime">Please Select Time</string>
    <string name="action_settings">Settings</string>
    <string name="maker">Maker :</string>
    <string name="scan_employee_id">Scan Employee ID</string>
    <string name="exit">Exit</string>
    <string name="scan">Scan</string>
    <string name="refresh">Refresh</string>
    <string name="pls_check_conn">Please Check Connection!! Error : </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="company">Company</string>
    <string name="branch">Branch</string>
    <string name="ip">IP :</string>
    <string name="tax_id">TAX ID :</string>
    <string name="pos_id">POS ID :</string>
    <string name="store_name">Store Name:</string>
    <string name="total_now">Total :</string>
    <string name="txt_barcode">Barcode Card :</string>
    <string name="changeStore">Change Store</string>
    <string name="close">Close</string>
    <string name="reset">Reset</string>
    <string name="end_day">End Day</string>
    <string name="scan_barcode">scan barcode</string>
    <string name="cancle">Cancel</string>
    <string name="category">Category</string>
    <string name="food">food</string>
    <string name="sale_item_detail">SALE ITEM DETAIL</string>
    <string name="menu_1">MENU1</string>
    <string name="menu_2">MENU2</string>
    <string name="server_ip">Server IP : </string>
    <string name="username">Username : </string>
    <string name="password">Password : </string>
    <string name="database">Database : </string>
    <string name="duration">Rabbit Duration : </string>
    <string name="server_ip_hint">Server IP</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="database_hint">Database</string>
    <string name="duration_hint">Rabbit Duration</string>
    <string name="connect">Connect</string>
    <string name="save">Save</string>
    <string name="print_foodname">Print Foodname</string>
    <string name="print_slip">Print Slip:</string>
    <string name="not_print">Not Print</string>
    <string name="copies_slip">Copies Slip</string>
    <string name="wifi">Wifi</string>
    <string name="ip_wifi">IP Wifi</string>
    <string name="ssid">SSID:</string>
    <string name="ssid_hint"> SSID</string>
    <string name="multi_cards_payment">Multi-cards payment</string>
    <string name="usb_scanner">USB Scanner</string>
    <string name="back">Back</string>
    <string name="download_program">Download Program</string>
    <string name="update">Update</string>
    <string name="last_menu">Last Menu: </string>
    <string name="printer_finish">The print data is complete</string>
    <string name="printer_need_paper">The printer is out of paper,Please load paper and try again</string>
    <string name="printer_gray1">Set the printer grayscale to level 1</string>
    <string name="printer_gray1_success">Set the printer grayscale to level 1 success</string>
    <string name="printer_gray_exception">Exception occurred in Setting the printer grayscale</string>
    <string name="printer_gray2">Set the printer grayscale to level 2</string>
    <string name="printer_gray2_success">Set the printer grayscale to level 2 success</string>
    <string name="printer_gray3">Set the printer grayscale to level 3</string>
    <string name="printer_gray3_success">Set the printer grayscale to level 3 success</string>
    <string name="printer_gray4">Set the printer grayscale to level 4</string>
    <string name="printer_gray4_success">Set the printer grayscale to level 4 success</string>
    <string name="printer_textsize_bigger">The font gets larger test data</string>
    <string name="printer_textsize_blod">Bold print test data</string>
    <string name="printer_left">Print the test data to left</string>
    <string name="printer_center">Print the test data to center</string>
    <string name="printer_right">Print the test data to right</string>
    <string name="printer_underline">Underline test data</string>
    <string name="printer_amount">Amount:</string>
    <string name="printer_newline">Newline test data</string>
    <string name="printer_acceptorid_name">Business Name Test Data</string>
    <string name="printer_line_distance">Line spacing and character spacing content adjustment</string>
    <string name="printer_left_distance">Left margin</string>
    <string name="printer_device_busy">The printer device is busy</string>
    <string name="printer_success">Print success</string>
    <string name="printer_lack_paper">The printer is out of paper</string>
    <string name="printer_over_heigh">The printer is overheating</string>
    <string name="printer_over_heat">The printer is hot</string>
    <string name="printer_low_power">The printer is low on power</string>
    <string name="printer_other_exception_code">Other exceptions, exception code:</string>
    <string name="printer_spit_success">The printer spit paper success</string>
    <string name="printer_spit_exception">The printer spit paper exception:</string>
    <string name="printer_status_exception">Exception occurred in getting the printer status</string>
    <string name="printer_init_success">Initialize the print parameters success</string>
    <string name="printer_init_exception">Initialization of printer parameters failed</string>
    <string name="printer_textsize_normal">Normal font</string>
    <string name="printer_textsize_small">Small font</string>
    <string name="printer_texisize_higher">Times higher</string>
    <string name="printer_textsize_wider">Times wide</string>
    <string name="printer_higher_wider">Times highe and times wide</string>
    <string name="print_qr_code">QR Code</string>
    <string name="input_qrcode_msg">QR code information, no input default print 450 characters</string>
    <string name="print_one_code">One dimension code</string>
    <string name="input_one_code_msg">One dimension code information, no input default print 20 characters</string>
    <string name="barcode_type">codeType</string>
    <string name="print">print</string>
    <string name="print_effect">Effect Print</string>
    <string name="print_as_image">Print Text As Image</string>
    <string name="print_datas">Print Datas</string>
    <string name="rfcard_type">Get RF type success. Type:</string>
    <string name="rfcard_type_excp">Get RF type failed</string>
    <string name="rfcard_open_succ">Open RF card success </string>
    <string name="rfcard_open_fail">Open RF card failed</string>
    <string name="rfcard_state">RF card state:</string>
    <string name="rfcard_pwmbeep_param_set_succ">Set pwmbeep parament success</string>
    <string name="rfcard_pwmbeep_param_set_err">Set pwmbeep parament failed</string>
    <string name="rfcard_led_control_succ">Control RF led success</string>
    <string name="rfcard_led_control_fail">Control RF led failed</string>
    <string name="rfcard_reset_result">RF card reset result:</string>
    <string name="rfcard_reset_fail">Reset RF card failed</string>
    <string name="rfcard_halt_succ">Halt RF card success</string>
    <string name="rfcard_halt_fail">Halt RF card failed</string>
    <string name="rfcard_category_null">RF card choosed catelog is null.</string>
    <string name="rfcard_category">RF card choosed catelog:</string>
    <string name="rfcard_category_excp">Exception occurred in choosing catelog:</string>
    <string name="rfcard_close_succ">Close RF card success</string>
    <string name="rfcard_close_excp">Close RF card failed</string>
    <string name="rfcard_communicate_idcard_succ">Communicating with ID card success</string>
    <string name="rfcard_communicate_idcard_fail">Communicate with ID card Failed</string>
    <string name="printer_checkblack_succ">Check Black Label Success</string>
    <string name="printer_checkblack_fail">Check Black Label Fail</string>
    <string name="rfcard_wupareset_succ">wupa Reset Success</string>
    <string name="rfcard_wupareset_fail">wupa Reset Fail</string>
    <string name="rfcard_fxauth_fail">fangxin Auth Fail</string>
    <string name="rfcard_fxauth_success">fangxin Auth Success</string>
    <string name="open_print_queue">Open printer queue</string>
    <string name="close_print_queue">Close printer queue</string>
    <string name="open_queue_success">Open printer queue success</string>
    <string name="open_queue_failed">Open printer queue failed</string>
    <string name="open_queue_exception">Open printer queue exception:</string>
    <string name="close_queue_success">Close printer queue success功</string>
    <string name="close_queue_failed">Close printer queue failed</string>
    <string name="close_queue_exception">&amp;gt;Close printer queue exception:</string>
    <string name="getRandom">getRandom</string>
    <string name="generateKeyPair">generateKeyPair</string>
    <string name="rsaDecrypt">rsaDecrypt</string>
    <string name="generateCSR">generateCSR</string>
    <string name="rsaEncrypt">rsaEncrypt</string>
    <string name="load_certicicate">loadCerticicate</string>
    <string name="load_self_sign">loadSelfSign</string>
    <string name="delete_cert">deleteCert</string>
    <string name="delete_keypair">deleteKeypair</string>
    <string name="read2">Read2</string>
    <string name="write2">Write2</string>
    <string name="idcard_html_scan">Html Scan</string>
    <string name="cash">cash</string>
    <string name="refund">refund</string>
    <string name="addDRL">addDRL</string>
    <string name="deleteDRL">deleteDRL</string>
    <string name="clearAllDRL">clearAllDRL</string>
    <string name="readDRLParams">readDRLParams</string>
    <string name="inport_cert_success">Import cert success</string>
    <string name="import_cert_failed">Import cert failed</string>
    <string name="load_cert_success">Load cert：</string>
    <string name="load_cert_failed">Load cert failed</string>
    <string name="get_random_success">random:</string>
    <string name="get_random_failed">Get random failed</string>
    <string name="generate_keypair_success">Generate keypari success</string>
    <string name="generate_keypair_failed">Generate keypari failed</string>
    <string name="rsa_encrypt_success">RSA encrypt result:</string>
    <string name="rsa_encrypt_failed">RSA encrypt failed</string>
    <string name="rsa_decrypt_success">RSA decrypt result</string>
    <string name="rsa_decrypt_failed">RSA decrypt failed</string>
    <string name="generate_csr_success">Generate csr result:</string>
    <string name="generate_csr_failed">Generate csr failed</string>
    <string name="load_self_sign_success">Load self sign cert result:</string>
    <string name="load_self_sign_failed">Load self sign cert failed</string>
    <string name="delete_keypair_success">delete keypari success</string>
    <string name="delete_keypair_failed">delete keyprair failed</string>
    <string name="base_server_scan">Base server scan</string>
    <string name="bind_service_fail">Bind service failed</string>
    <string name="bind_service_success">Bind service success</string>
    <string name="checkBlack">checkBlack</string>
    <string name="selete_printer_gray">select printer grayscale first,please</string>
    <string name="level1">level1</string>
    <string name="level2">level2</string>
    <string name="level3">level3</string>
    <string name="level4">level4</string>
    <string name="init_printer">init</string>
    <string name="print_text">printText</string>
    <string name="print_barcode">printBarCode</string>
    <string name="print_bmp">printBmp</string>
    <string name="print_bmp_fast">printBmpFast</string>
    <string name="spit_paper">spitPaper</string>
</resources>