<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".activity.ConfigurationActivity">


    <!--Title-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/head_margin"
        android:text="@string/config_title"
        android:textSize="@dimen/h5" />

    <!--Content Group-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/server_ip"
                android:textSize="@dimen/h6" />

            <EditText
                android:id="@+id/edtIP"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:hint="@string/server_ip_hint"
                android:inputType="text"
                android:textSize="@dimen/h5" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/database"
                android:textSize="@dimen/h6" />

            <EditText
                android:id="@+id/edtDatabase"

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:hint="@string/database_hint"
                android:inputType="text"
                android:textSize="@dimen/h5" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/username"
                android:textSize="@dimen/h6" />

            <EditText
                android:id="@+id/username"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:hint="@string/username_hint"
                android:inputType="text"
                android:textSize="@dimen/h5" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/password"
                android:textSize="@dimen/h6" />

            <EditText
                android:id="@+id/password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:hint="@string/password_hint"
                android:inputType="text"
                android:textSize="@dimen/h5" />

        </LinearLayout>

        <LinearLayout
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:gravity="end"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/duration"
                android:textSize="@dimen/h6" />

            <EditText
                android:id="@+id/edt_duration"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/duration_hint"
                android:inputType="numberSigned"
                android:textSize="@dimen/h5" />

            <TextView
                android:visibility="invisible"
                android:gravity="end"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/duration"
                android:textSize="@dimen/h6" />

            <EditText
                android:visibility="invisible"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/duration_hint"
                android:inputType="numberSigned"
                android:textSize="@dimen/h5" />


        </LinearLayout>



    </LinearLayout>

    <!--Button Group-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">


        <Button
            android:id="@+id/btn_save"
            android:onClick="SaveButtonController"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/mini_margin"
            android:text="@string/save"
            android:textSize="@dimen/h5" />

        <Button
            android:id="@+id/btn_back"
            android:onClick="BackButtonController"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/mini_margin"
            android:text="@string/back"
            android:textSize="@dimen/h5" />

        <Button
            android:id="@+id/btn_download"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/mini_margin"
            android:text="@string/download_program"
            android:textSize="@dimen/h3"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/mini_margin"
            android:text="@string/update"
            android:textSize="@dimen/h3"
            android:visibility="gone" />
    </LinearLayout>

</LinearLayout>